- Added new inventory and line buttons as toolbox control - Fix: Zoom in/out buttons are correctly right-aligned

--- a/public/boss/app/io.bithead.lean/graph.css
+++ b/public/boss/app/io.bithead.lean/graph.css
@@ -27,10 +27,17 @@
 
 .grabbing { cursor: grabbing !important; }
 
+#toolbox {
+    position: absolute;
+    top: 10px;
+    left: 10px;
+    z-index: 10;
+}
+
 #controls {
     position: absolute;
     top: 10px;
-    right: 10px;
+    right: 30px;
     z-index: 10;
 }
 
